--- a/first.html
+++ b/first.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>css</title>
+    <link rel="stylesheet" href="style.css/style.css">
+    <link rel="shortcut icon" href="pic/5158828.png" type="image/x-icon">
 </head>
 <body>
-    <h1>hlleo</h1>
+    <h1></h1>
 </body>
 </html>
