--- a/first.html
+++ b/first.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,26 @@
     <link rel="stylesheet" href="style.css/style.css">
     <link rel="shortcut icon" href="pic/5158828.png" type="image/x-icon">
 </head>
-<body>
-    <h1></h1>
+
+<body id="youmop">
+    <section>
+        <div class="ber">
+            <!-- ?nav -->
+            <h1 class="berh1">Hello, we are <span id="porto">Porto</span>, exploring fashion,<br>
+                lifestyle <span id="and">And</span> health</h1>
+            <p class="berp">Introducing a modern and sleek theme for Ghost. Perfect for magazine, newsletter,<br>
+                professional and personal blog publishing.
+            </p>
+            <button class="berbtn">Join Now it's free</button>
+        </div>
+        
+    </section>
+    <!-- Featured posts -->
+    <section>
+        
+        <h1 style="text-align: center;
+        font-size: 24px;">Featured posts</h1>
+    </section>
 </body>
+
 </html>
