--- a/first.html
+++ b/first.html
@@ -20,13 +20,24 @@
             </p>
             <button class="berbtn">Join Now it's free</button>
         </div>
-        
+
     </section>
     <!-- Featured posts -->
-    <section>
-        
-        <h1 style="text-align: center;
-        font-size: 24px;">Featured posts</h1>
+    <h1 style="text-align: center;font-size: 24px; margin-bottom: 16px;">Featured posts</h1>
+    <section id="Featured">
+        <!-- first div -->
+        <div class="cardimg">
+            <img class="cardimgtra" src="pic/savvas-kalimeris-hO3do8FKJkQ-unsplash.jpg" alt="">
+            <br>
+            <button class="btnTravel">Travle</button>
+            <h1 class="berh1">Never let your memories be greater than your dreams</h1>
+            <p class="berp">Before long the searchlight discovered some distance away a schooner with all sails set, apparently the
+                same vessel which had been noticed earlier in the evening. The wind had by this time backed to the east,
+                and there was a shudder amongst the watchers on
+            </p>
+        </div>
+        <!-- second div -->
+        <div></div>
     </section>
 </body>
 
