--- a/first.html
+++ b/first.html
@@ -35,9 +35,19 @@
                 same vessel which had been noticed earlier in the evening. The wind had by this time backed to the east,
                 and there was a shudder amongst the watchers on
             </p>
+            <p>3 min read</p>
         </div>
         <!-- second div -->
-        <div></div>
+        <div>
+            <!-- 1stcard -->
+            <div class="lifestyle">
+                <img class="cardimgtra2" src="pic/freestocks-_3Q3tsJ01nc-unsplash.jpg" alt="">
+                <div>
+                    <button>Lifestyle</button>
+                    <h1>Self-observation is the first step of inner unfolding</h1>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
