--- a/first.html
+++ b/first.html
@@ -29,7 +29,7 @@
         <div class="cardimg">
             <img class="cardimgtra" src="pic/savvas-kalimeris-hO3do8FKJkQ-unsplash.jpg" alt="">
             <br>
-            <button class="btnTravel">Travle</button>
+            <button class="btnTravel">Travle Lover</button>
             <h1 class="berh1">Never let your memories be greater than your dreams</h1>
             <p class="berp">Before long the searchlight discovered some distance away a schooner with all sails set, apparently the
                 same vessel which had been noticed earlier in the evening. The wind had by this time backed to the east,
@@ -43,11 +43,40 @@
             <div class="lifestyle">
                 <img class="cardimgtra2" src="pic/freestocks-_3Q3tsJ01nc-unsplash.jpg" alt="">
                 <div>
-                    <button>Lifestyle</button>
-                    <h1>Self-observation is the first step of inner unfolding</h1>
+                    <button class="Lifestyle2">Lifestyle Lover</button>
+                    <h1 class="berh1">Self-observation is the first step <br> of inner unfolding</h1>
+                </div>
+            </div>
+            <!-- 2ndcard -->
+            <div class="lifestyle">
+                <img class="cardimgtra2" src="pic/chelsea-shapouri-r40EYKVyutI-unsplash.jpg" alt="">
+                <div>
+                    <button class="health">Health Lover</button>
+                    <h1 class="berh1">Self-observation is the first step <br> of inner unfolding</h1>
+                </div>
+            </div>
+            <!-- 3rd card -->
+            <div class="lifestyle">
+                <img class="cardimgtra2" src="pic/thisisengineering-ZPeXrWxOjRQ-unsplash.jpg" alt="">
+                <div>
+                    <button class="technolgy">Technolgy Lover</button>
+                    <h1 class="berh1">Self-observation is the first step <br> of inner unfolding</h1>
+                </div>
+            </div>
+            <!-- 4rd card -->
+            <div class="lifestyle">
+                <img class="cardimgtra2" src="pic/tristan-colangelo-d4OnMIl5OYk-unsplash.jpg" alt="">
+                <div>
+                    <button class="food">Food Lover</button>
+                    <h1 class="berh1">Self-observation is the first step <br> of inner unfolding</h1>
                 </div>
             </div>
         </div>
+    </section>
+    <!-- populer tags  -->
+    <h1 style="text-align: center;font-size: 24px; margin-bottom: 24px; margin-top: 24px;">Popular Post</h1>
+    <section>
+
     </section>
 </body>
 
