--- a/first.html
+++ b/first.html
@@ -76,7 +76,65 @@
     <!-- populer tags  -->
     <h1 style="text-align: center;font-size: 24px; margin-bottom: 24px; margin-top: 24px;">Popular Post</h1>
     <section>
-
+<div class="inspi">
+    <button class="inspiration">
+        <div class="inspiration2">
+            <img class="inspiration3" src="pic/chelsea-shapouri-r40EYKVyutI-unsplash.jpg" alt="">
+            <br>
+            <div>
+                <h1 class="inspiration">Never let</h1>
+            <p>3 min read</p>
+            </div>
+        </div>
+    </button>
+    <button class="inspiration">
+        <div class="inspiration2">
+            <img class="inspiration3" src="pic/chelsea-shapouri-r40EYKVyutI-unsplash.jpg" alt="">
+            <br>
+            <div>
+                <h1 class="inspiration">Never let</h1>
+            <p>3 min read</p>
+            </div>
+        </div>
+    </button>
+    <button class="inspiration">
+        <div class="inspiration2">
+            <img class="inspiration3" src="pic/chelsea-shapouri-r40EYKVyutI-unsplash.jpg" alt="">
+            <br>
+            <div>
+                <h1 class="inspiration">Never let</h1>
+            <p>3 min read</p>
+            </div>
+        </div>
+    </button>
+    <button class="inspiration">
+        <div class="inspiration2">
+            <img class="inspiration3" src="pic/chelsea-shapouri-r40EYKVyutI-unsplash.jpg" alt="">
+            <br>
+            <div>
+                <h1 class="inspiration">Never let</h1>
+            <p>3 min read</p>
+            </div>
+        </div>
+    </button>
+    <button class="inspiration">
+        <div class="inspiration2">
+            <img class="inspiration3" src="pic/chelsea-shapouri-r40EYKVyutI-unsplash.jpg" alt="">
+            <br>
+            <div>
+                <h1 class="inspiration">Never let</h1>
+            <p>3 min read</p>
+            </div>
+        </div>
+    </button>
+    
+    <button></button>
+    <button></button>
+    <button></button>
+    <button></button>
+    <button></button>
+    <button></button>
+</div>
     </section>
 </body>
 
