--- a/first.html
+++ b/first.html
@@ -75,65 +75,92 @@
     </section>
     <!-- populer tags  -->
     <h1 style="text-align: center;font-size: 24px; margin-bottom: 24px; margin-top: 24px;">Popular Post</h1>
+    <!--  -->
     <section>
 <div class="inspi">
     <button class="inspiration">
         <div class="inspiration2">
-            <img class="inspiration3" src="pic/chelsea-shapouri-r40EYKVyutI-unsplash.jpg" alt="">
+            <img class="inspiration3" src="pic/ian-schneider-TamMbr4okv4-unsplash.jpg" alt="">
             <br>
             <div>
-                <h1 class="inspiration">Never let</h1>
+                <h1 class="inspirationh1">Inspiration</h1>
             <p>3 min read</p>
             </div>
         </div>
     </button>
     <button class="inspiration">
         <div class="inspiration2">
-            <img class="inspiration3" src="pic/chelsea-shapouri-r40EYKVyutI-unsplash.jpg" alt="">
+            <img class="inspiration3" src="pic/ray-hennessy-HlJ7U9WHRR8-unsplash.jpg" alt="">
             <br>
             <div>
-                <h1 class="inspiration">Never let</h1>
+                <h1 class="inspirationh1">Nature</h1>
             <p>3 min read</p>
             </div>
         </div>
     </button>
     <button class="inspiration">
         <div class="inspiration2">
-            <img class="inspiration3" src="pic/chelsea-shapouri-r40EYKVyutI-unsplash.jpg" alt="">
+            <img class="inspiration3" src="pic/brooke-cagle-kElEigko7PU-unsplash.jpg" alt="">
             <br>
             <div>
-                <h1 class="inspiration">Never let</h1>
+                <h1 class="inspirationh1">LifeStyle</h1>
             <p>3 min read</p>
             </div>
         </div>
     </button>
     <button class="inspiration">
         <div class="inspiration2">
-            <img class="inspiration3" src="pic/chelsea-shapouri-r40EYKVyutI-unsplash.jpg" alt="">
+            <img class="inspiration3" src="pic/christin-hume-0MoF-Fe0w0A-unsplash.jpg" alt="">
             <br>
             <div>
-                <h1 class="inspiration">Never let</h1>
+                <h1 class="inspirationh1">Health</h1>
             <p>3 min read</p>
             </div>
         </div>
     </button>
     <button class="inspiration">
         <div class="inspiration2">
-            <img class="inspiration3" src="pic/chelsea-shapouri-r40EYKVyutI-unsplash.jpg" alt="">
+            <img class="inspiration3" src="pic/sean-oulashin-KMn4VEeEPR8-unsplash.jpg" alt="">
             <br>
             <div>
-                <h1 class="inspiration">Never let</h1>
+                <h1 class="inspirationh1">Travel</h1>
             <p>3 min read</p>
             </div>
         </div>
     </button>
-    
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
+</div>
+<!--  -->
+<div class="inspi2">
+    <button class="inspiration">
+        <div class="inspiration2">
+            <img class="inspiration3" src="pic/saurav-thapa-shrestha-UVmMfLDEajI-unsplash.jpg" alt="">
+            <br>
+            <div>
+                <h1 class="inspirationh1">Food lover</h1>
+            <p>3 min read</p>
+            </div>
+        </div>
+    </button>
+    <button class="inspiration">
+        <div class="inspiration2">
+            <img class="inspiration3" src="pic/luke-chesser-rCOWMC8qf8A-unsplash.jpg" alt="">
+            <br>
+            <div>
+                <h1 class="inspirationh1">Technolgy</h1>
+            <p>3 min read</p>
+            </div>
+        </div>
+    </button>
+    <button class="inspiration">
+        <div class="inspiration2">
+            <img class="inspiration3" src="pic/ionela-mat-YKeI255r5MQ-unsplash.jpg" alt="">
+            <br>
+            <div>
+                <h1 class="inspirationh1">Book Lover</h1>
+            <p>3 min read</p>
+            </div>
+        </div>
+    </button>
 </div>
     </section>
 </body>
